--- a/modulos/tuplaOrd.tex
+++ b/modulos/tuplaOrd.tex
@@ -62,7 +62,7 @@ Este módulo permite crear tuplas con orden absoluto. El orden se define por el 
 	\InterfazFuncion{\puntito $<$ \puntito}{\In{t1}{tupOrd}, \In{t2}{tupOrd}}{$\alpha$}
 	{$res \igobs t1 < t2$}
 	[$O(1)$]
-	[Devuelve si la primer tupla es mejor a la segunda]
+	[Devuelve si la primer tupla es menor a la segunda]
 
 	\TituloDis{Especificación de las operaciones auxiliares utilizadas en la interfaz}
 
