--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -194,7 +194,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 			\tupItem{pokemons}{diccString(nat)}
 			\tupItem{posConPokemons}{conj(coor)}
 			\tupItem{\\jugadores}{vector(puntero(infoJugador))}
-			%TODO pachi no quiere punteros
+			%TODO punteros en consideraciones
 			\tupItem{\\grillaPos}{arreglo\_dimensionable de (arreglo\_dimensionable de infoPos)}
 			\tupItem{\\cantPokemons}{nat}
 		\end{Tupla}
@@ -444,10 +444,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 	\IF vacía?(cola) THEN
 		false
 	ELSE
-		\IF próximo(cola) = tupla THEN
-			true
-		ELSE
-			enCapturaValida(tupla, desencolar(cola))
+		(próximo(cola) = tupla) $\lor$ enCapturaValida(tupla, desencolar(cola))
 	FI}
 
 	\tadAxioma{}
@@ -645,7 +642,6 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 	~
 
 	\begin{algorithm}[H]
-	%TODO corregir
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iMoverse}{\Inout{j}{pokego}, \In{e}{jugador}, \In{c}{coor}}{}}
 		coor : posAnterior $\leftarrow$ Posicion(j,e)\OdeLinea{1}
