--- a/modulos/modulo_colaPrior.tex
+++ b/modulos/modulo_colaPrior.tex
@@ -153,7 +153,7 @@ Se usa $\#C$ para denotar la cantidad de elementos de la cola, $elem_1$ y $elem_
 
 	\TituloDis{Invariante de Representación del iterador}
 
-	\Rep[eItCola][it]{true}
+	\RepFc[eItCola][it]{true}
 
 	\TituloDis{Función de Abstracción del iterador}
 
