--- a/modulos/modulo_colaPrior.tex
+++ b/modulos/modulo_colaPrior.tex
@@ -153,12 +153,11 @@ Se usa $\#C$ para denotar la cantidad de elementos de la cola, $elem_1$ y $elem_
 
 	\TituloDis{Invariante de Representación del iterador}
 
-	\RepFc[eItCola][it]{true}
+	\RepFc[itConjOrd($\alpha$)][it]{true}
 
 	\TituloDis{Función de Abstracción del iterador}
 
-	\Abs[eItCola]{itUni($\alpha$)}[e]{d}
-	{TODO}
+	\Abs[itConjOrd($\alpha$)]{itUni($\alpha$)}[e]{d}{Siguientes(d) = Siguientes(e)}
 
 \end{Representacion}
 
