--- a/modulos/modulo_colaPrior.tex
+++ b/modulos/modulo_colaPrior.tex
@@ -25,6 +25,8 @@ Se usa $\#C$ para denotar la cantidad de elementos de la cola, $elem_1$ y $elem_
 
 	\textbf{géneros}: \TipoVariable{colaPrior($\alpha$), itColaPrior($\alpha$)}.
 
+	\textbf{servicios usados}: \tadNombre{ConjuntoOrd($\alpha$)}
+
 	\TituloDis{Operaciones básicas de ColaPrioridad($\alpha$)}
 
 	\InterfazFuncion{Vacía}{}{colaPrior}
