--- a/modulos/modulo_mapa.tex
+++ b/modulos/modulo_mapa.tex
@@ -3,7 +3,7 @@
 \section{Módulo Mapa}
 
 Las posiciones se almacenan en una grilla dinámica.
-El mapa asegura la posibililidad de encontrar conexiones rápidamente al costo de agregado lento. En cada posición se almacena el grupo del conexiones al que pertenece: se considera que dos posiciones están conectadas si pertenecen al mismo grupo. Al ser agregada una posición, las nuevas conexiones se calculan automáticamente.
+El mapa asegura la posibililidad de encontrar conexiones rápidamente al costo de agregado lento. En cada posición se almacena el grupo de conexiones al que pertenece: se considera que dos posiciones están conectadas si pertenecen al mismo grupo. Al ser agregada una posición, las nuevas conexiones se calculan automáticamente.
 
 Usaremos $lat_{max}$ y $long_{max}$ para denotar las máximas dimensiones entre las posiciones existentes del mapa.
 
