--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -650,8 +650,8 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 		\If{\textbf{not} HayCamino(j.mapa, posAnterior, c) \textbf{or} DistEuclidea(posAnterior, c) $>$ 100}{
 			(*j.jugadores[e]).sanciones $\leftarrow$ (*j.jugadores[e]).sanciones + 1\OdeLinea{1}
 		}
+		\tcc{Si el jugador debe ser eliminado, borramos sus pokémons; si no, lo movemos}
 		\eIf{(*j.jugadores[e]).sanciones = 5}{
-			\tcc{Si el jugador debe ser eliminado, borramos sus pokémons}
 			itDiccString(nat) : pokesABorrar $\leftarrow$ CrearIt((*j.jugadores[e]).pokemonsCapturados)\OdeLinea{1}
 			\While(\OdeBloque{PC \times |P|}){HaySiguiente(pokesABorrar)}{
 				tupla(clave: String, significado: Nat) : sig $\leftarrow$ Siguiente(pokesABorrar)\OdeLinea{|P|}
@@ -662,20 +662,19 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 					Definir(j.pokemons, pk, nuevaCant)\OdeLinea{|P|}
 				}
 				j.cantPokemons $\leftarrow$ j.cantPokemons - sig.significado\OdeLinea{1}
+				Avanzar(pokesABorrar)\OdeLinea{1}
 			}
 		}{
-			\tcc{Si el jugador sigue siendo válido, lo agregamos al conjunto de su nueva posición y a la cola de espera}
 			(*j.jugadores[e]).posicion $\leftarrow$ c\OdeLinea{1}
 			AgregarACola(j, e, c)\OdeLinea{log(EC)}
 			Agregar(j.grillaPos[Latitud(c)][Longitud(c)].jugsEnPos, e)\OdeLinea{log(EC)}
 		}
 
 		it $\leftarrow$ CrearIt(j.posConPokemons)\OdeLinea{1}
-		\tcc{Iteramos las posiciones con pokémons}
+		\tcc{Para cada posición con pokémon, si el movimiento es lejano se suma al contador y se maneja captura; si el jugador entró a una nueva área de captura, se reinicia el contador}
 		\While(\OdeBloque{PS \times |P|}){HaySiguiente?(it)}{
 			coor: coorConPk $\leftarrow$ Siguiente(it)\OdeLinea{1}
 			\eIf{DistEuclidea(c, coorConPk) $>$ 4}{
-				\tcc{Si el movimiento es lejano, sumar al contador y manejar captura si corresponde}
 				j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)].contadorCaptura $\leftarrow$ j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)].contadorCaptura +1\OdeLinea{1}
 				infoPos: posPk $\leftarrow$ j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)]\OdeLinea{1}
 				\eIf{posPk.contadorCaptura = 10}{
@@ -688,15 +687,12 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 					}{
 						Definir((*j.jugadores[captor]).pokemonsCapturados, pk, 1)\OdeLinea{|P|}
 					}
-
-					\tcc{Si se elimina esa posición, no hay que avanzar el iterador}
 					EliminarSiguiente(it)\OdeLinea{1}
 				}{
 					Avanzar(it)\OdeLinea{1}
 				}
 			}{
 				\If{DistEuclidea(posAnterior, coorConPk) $>$ 4}{
-					\tcc{Si el jugador entró a una nueva área de captura, reiniciar el contador}
 					j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)].contadorCaptura $\leftarrow$ 0\OdeLinea{1}
 				}
 				Avanzar(it)\OdeLinea{1}
