--- a/resolucion.tex
+++ b/resolucion.tex
@@ -23,7 +23,7 @@
 \fecha{\today}
 \grupo{Grupo ``Algo Habrán Hecho (por las Estructuras de Datos)''}
 \titulo{Trabajo Práctico 2}
-\subtitulo{Especificación}
+\subtitulo{Diseño}
 
 \integrante{Barylko, Roni Ariel}{750/15}{rbarylko@dc.uba.ar}
 \integrante{Giudice, Carlos}{694/15}{cgiudice@dc.uba.ar}
