usar tupla con orden en juego

--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -24,7 +24,7 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 
 	\textbf{géneros}: \TipoVariable{juego}, \TipoVariable{itJugadores}.
 
-	\textbf{servicios usados}: \tadNombre{Coordenada}, \tadNombre{Mapa}, \tadNombre{Vector($\alpha$)}, \tadNombre{DiccionarioString($\alpha$)}, \tadNombre{ColaPrioridad($\alpha$)}, \tadNombre{Conjunto Lineal($\alpha$)}, \tadNombre{ConjuntoOrd($\alpha$)}
+	\textbf{servicios usados}: \tadNombre{Coordenada}, \tadNombre{Mapa}, \tadNombre{Vector($\alpha$)}, \tadNombre{DiccionarioString($\alpha$)}, \tadNombre{ColaPrioridad($\alpha$)}, \tadNombre{Conjunto Lineal($\alpha$)}, \tadNombre{ConjuntoOrd($\alpha$)}, \tadNombre{Tupla con Orden($\alpha$, $\beta$)}
 
 
 	\InterfazFuncion{CrearJuego}{\In{m}{mapa}}{juego}
