--- a/modulos/modulo_mapa.tex
+++ b/modulos/modulo_mapa.tex
@@ -281,6 +281,10 @@ Usaremos $lat_{max}$ y $long_{max}$ para denotar las máximas dimensiones entre 
 		res $\leftarrow$ m.ancho\OdeLinea{1}
 	\end{algorithm}
 
+	\complejidad: $O(1)$
+
+	\justifcomp: solo se accede a variables del mapa.
+
 	~
 
 	\begin{algorithm}[H]
